<resources>
    <string name="app_name">Material Design</string>
    <string name="info">Info</string>
    <string name="wiki">Wiki</string>
    <string name="settings">Settings</string>
    <string name="wiki_search_hint">Find in Wiki</string>
    <string name="wiki_search_helper_text">Search for the term in Wiki</string>
    <string name="theme_name_standard">Light</string>
    <string name="theme_name_night">Night</string>
    <string name="theme_name_mars">Mars</string>
    <string name="theme_name_android">Android</string>
    <string name="theme_settings_title">Theme</string>
    <string name="apod">Picture of the day</string>
    <string name="earth_from_space">Earth from space</string>
    <string name="earth_polychromatic_imaging_camera">Earth Polychromatic Imaging Camera</string>
    <string name="astronomy_picture_of_the_day">Astronomy Picture Of The Day</string>
    <string name="notes">Notes</string>

</resources>