<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding">

    <TextView
        android:id="@+id/theme_settings_title"
        style="@style/title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_settings_title"
        tools:text="Theme" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/theme_settings_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/theme_light_chip"
            style="@style/chip_style"
            android:text="@string/theme_name_standard" />

        <com.google.android.material.chip.Chip
            android:id="@+id/theme_night_chip"
            style="@style/chip_style"
            android:text="@string/theme_name_night" />

        <com.google.android.material.chip.Chip
            android:id="@+id/theme_mars_chip"
            style="@style/chip_style"
            android:text="@string/theme_name_mars" />

        <com.google.android.material.chip.Chip
            android:id="@+id/theme_android_chip"
            style="@style/chip_style"
            android:text="@string/theme_name_android" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>